| Bug #10932 | Building server with key limit of 128, makes test cases fail | ||
|---|---|---|---|
| Submitted: | 27 May 2005 22:54 | Modified: | 21 Dec 2005 15:08 |
| Reporter: | Kent Boortz | ||
| Status: | Closed | ||
| Category: | Server: MyISAM | Severity: | S1 (Critical) |
| Version: | 5.0.6 | OS: | Linux (Linux) |
| Assigned to: | Ingo Strüwing | Target Version: | |
[27 May 2005 22:54]
Kent Boortz
[27 May 2005 22:57]
Kent Boortz
Patch to raise the limit for number of keys from 64 to 128
Attachment: keys128.patch2 (application/octet-stream, text), 2.15 KiB.
[14 Jun 2005 11:35]
Sergei Golubchik
128 keys test
Attachment: 128.sql (application/octet-stream, text), 1.95 KiB.
[17 Jun 2005 16:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26119
[18 Jun 2005 14:36]
Ingo Strüwing
The experimental patch should not show up as "Patch pending".
[21 Jun 2005 18:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26253
[21 Jun 2005 18:14]
Ingo Strüwing
The generated test script must be used with the force option. It generates four failing commands with unique key violations.
Attachment: bug10932-gen128.pl (application/x-perl, text), 6.09 KiB.
[19 Jul 2005 14:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27299
[19 Jul 2005 17:13]
Ingo Strüwing
I pushed the approved part of the patch into 5.0.10-beta. To make the custom builds for 128 indexes easier, I will propose another patch, which allows to configure --with-indexes-128.
[20 Jul 2005 8:35]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27344
[2 Dec 2005 16:14]
Ingo Strüwing
Tar archive with test cases and patch, part 1
Attachment: bug10932.tar.bz2.aa (application/octet-stream, text), 200.00 KiB.
[2 Dec 2005 16:15]
Ingo Strüwing
Tar archive with test cases and patch, part 2
Attachment: bug10932.tar.bz2.ab (application/octet-stream, text), 199.21 KiB.
[2 Dec 2005 16:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/32964
[15 Dec 2005 11:05]
Ingo Strüwing
Pushed to 5.0.18 and 5.1.4.
[21 Dec 2005 15:08]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 5.0.18 and 5.1.4 changelogs. Updated 5.0 and 5.1 versions of MyISAM section
in Storage Engines chapter. Bug closed.
[21 Dec 2005 16:58]
Jon Stephens
NB: The correct ./configure option is --with-max-indexes=128.
